--- a/templates/admin/product/Productlist.html.twig
+++ b/templates/admin/product/Productlist.html.twig
@@ -15,7 +15,7 @@
                 <h5 class="card-title">{{ product.name }}</h5>
                 <p class="card-text">Description: {{ product.description }}</p>
                 <p class="card-text">Price: {{ product.price }}</p>
-                <p class="card-text">Quantity: {{ product.quantity }}</p>
+                <p class="card-text">Quantite: {{ product.quantite }}</p>
                <a href ="{{ path('Product_update', {'id': product.id}) }}" class="btn btn-primary">Update</a> 
                 <a href ="{{ path('Product_delete', {'id': product.id}) }}" class="btn btn-primary">Delete</a> 
                 <a href="{{ path('add_to_cart', {'id': product.id}) }}" class="btn btn-primary">Add to cart</a>
